--- a/case-decomposition.tex
+++ b/case-decomposition.tex
@@ -62,6 +62,9 @@ The intuition is the following. Syncretic forms are realized by a single `lexica
 I return to the terms lexical entry and lexicon shortly.
 } A lexical entry can be applied if it contains all features, as long as there is no more specific one. This system can generate the patterns ABC, AAA, ABB and AAB, but not ABA.
 
+%two reasons for nanosyntax: (1) clear connection between morphology and syntax and (2) differences between languages are formulated in terms of different lexical entries. there are universal fseqs and languages differ in in which groupings they spell out these fseqs, that's all. so there's no space for `special language specific' constraints
+
+
 Before I show how the four attest patterns can be derived (and the one unattested not), I need to make some theoretical assumptions explicit about Nanosyntax, the framework in which this dissertation is worked out. First, I show how the Nanosyntactic system is set up in such a way that morphological patterns (like syncretism, but also morphological containment) can inform us about the way syntax is structured. Therefore, I briefly discuss the general architecture of Nanosyntax, its postsyntactic lexicon, and the content and shape of lexical entries. Lastly, I discuss how multiple features (like \tsc{f1}, \tsc{f2} and \tsc{f3} from Table \ref{tbl:case-decomposed}) can be spelled out by a single phonological element, i.e. phrasal spellout.
 
 The architecture of Nanosyntax is schematically shown in Figure \ref{fig:nano} \citep[from][]{vandenwyngaerd2020,caha2019}.
