--- a/d-vs-wh.tex
+++ b/d-vs-wh.tex
@@ -29,6 +29,10 @@ Modern German differs crucially from Gothic and Old High German in that its head
 
 This can be modelled as follows:
 
+\exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
+ we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}\\
+ `Who visits us, Maria likes.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc-wen}
+
  \ex.
  \begin{forest} boom
 [
@@ -93,8 +97,8 @@ In \ref{ex:mg-extrapose-dp-base} the object, marked in bold, appears in its base
  1\tsc{sg}.\tsc{dat} is {the same} that matter\\
  `I don't care about that matter.' \flushfill{Modern German}\label{ex:mg-extrapose-dp-moved}
 
-So here we see that with an over head.
-
+The same CP-DP assymetry can be observed with relative clauses. A relative clause is a CP, and the head of a relative clause is a DP. The sentences in \ref{ex:extra-headed} contain the relative clause \tit{was er gestohlen hat} `what he has stolen'. This is marked in bold in the examples. The (light) head of the relative clause is \tit{das}.
+In \ref{ex:extra-headed-base}, the relative clause and its head appear in base position. In \ref{ex:extra-headed-only-clause}, the relative clause is extraposed. This is grammatical, because it is possible to extrapose CPs in Modern German. In \ref{ex:extra-headed-head-clause}, the relative clause and the head are extraposed. This is ungrammatical, because it is possible to extrapose DPs.
 
 \ex. \label{ex:extra-headed} adapted from Groos/v Riemsdijk
 \ag. Jan hat das, \tbf{was} \tbf{er} \tbf{gestohlen} \tbf{hat}, zurückgegeben.\\
@@ -107,44 +111,36 @@ the Hans has the money returned which he stolen has\\
 Jan has returned the money which he stolen has\\
 \glt `Jan has returned the money that he has stolen.'\label{ex:extra-headed-head-clause}
 
-Here without the head.
-\ref{ex:mg-extra} shows an example of a headless relative. The relative clause including the relative pronoun, marked in bold, appears in its base position in \ref{ex:mg-extra-no}. In \ref{ex:mg-extra-yes}, it is extraposed.
+The same can be observed in relative clauses without a head. \ref{ex:extra-headless} is the same sentence as in \ref{ex:extra-headed} only without the overt head. The relative clause is marked in bold again.
+In \ref{ex:extra-headless-base}, the relative clause and its head appear in base position. In \ref{ex:extra-headless-clause}, the relative clause is extraposed. This is grammatical, because it is possible to extrapose CPs in Modern German. In \ref{ex:extra-headless-no-rel}, the relative clause and the head are extraposed. This is ungrammatical, because it is possible to extrapose DPs.
+This shows that the relative pronoun in headless relatives in Modern German are necessarily part of the relative clause (a CP).
 
-\ex.\label{ex:mg-extra}
+\ex.\label{ex:extra-headless}
 \ag. Jan hat \tbf{was} \tbf{er} \tbf{gestohlen} \tbf{hat} zurückgegeben.\\
-the Hans has what he stolen has returned\\
-`Hans has returned what he has stolen.' \citet[185]{groos1981}\label{ex:mg-extra-no}
+Jan has what he stolen has returned\\
+`Hans has returned what he has stolen.' \citet[185]{groos1981}\label{ex:extra-headless-base}
 \bg. Jan hat zurückgegeben \tbf{was} \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
-the Hans has returned what he stolen has\\
-`Hans has returned what he has stolen.' \citet[185]{groos1981}\label{ex:mg-extra-yes}
+Jan has returned what he stolen has\\
+`Hans has returned what he has stolen.' \citet[185]{groos1981}\label{ex:extra-headless-clause}
+\bg. *Jan hat \tbf{was} zurückgegeben \tbf{er} \tbf{gestohlen} \tbf{hat}.\\
+Jan has what returned he stolen has\\
+`Hans has returned what he has stolen.' \citet[185]{groos1981}\label{ex:extra-headless-no-rel}
 
-\ref{ex:mg-extrapose-cp} and \ref{ex:mg-extrapose-dp} have shown that only CPs can be moved in Modern German and DPs cannot. \ref{ex:mg-extra} shows that the relative clause including the relative pronoun can be extraposed, so it is a CP.
+%Here connect the placement of the relative pronoun to the case.
+%explain how to the other case configuration does not work
 
-The second argument for the relative pronoun in headless relative being part of the relative clause comes from relative pronouns in headed relatives. Even though these here you can see too that the head is a DP in the main clause and the relative pronoun is part of the relative clause.
-
-\ref{ex:extra-headed-base} gives an example of a headed relative clause with the relative clause in base position. \tit{das Geld} `the money' is the head of the relative clause an \tit{das er gestohlen hat} `that he stole' is the relative clause.
-\ref{ex:extra-headed-only-clause} gives an example with the relative clause extraposed, so at the right edge of the clause. The head of the relative clause is left behind. This is grammatical. This means that a relative clause can be extraposed.
-\ref{ex:extra-headed-head-clause} gives an example with the relative caluse extraposed and the head of the relative clause with it. This is ungrammatical in Modern German. This means that the head of the relative clause cannot be extraposed.
-
-
-%
-% Last, I consider \tsc{wh}-pronouns in Modern German in general. There are more \tsc{wh}-pronouns, such as \tsc{wh}-interrogatives (but not indefinites), that typically appear at the left edge of the clause, just like in other \tsc{wh}-moving languages. An example with \tit{wen} `who' is given in \ref{ex:german-wh-left}. Non-\tsc{wh}-pronouns do not necessarily appear at the left edge of the clause, just as \tit{ihn} `him' in \ref{ex:german-non-wh-not-left}.
-%
-% \ex.
-% \ag. Wen hast du gestern gesehen?\\
-%  Who have you yesterday seen\\
-%  `Who did you see yesterday?'\label{ex:german-wh-left}
-% \bg. Ich habe ihn gestern gesehen.\\
-%  I have him yesterday seen\\
-%  `I saw him yesterday.'\label{ex:german-non-wh-not-left}
-
-Conclusion: the \tsc{wh}-pronoun is part of the relative clause in Modern German. It appears at the left edge.
-
+In conclusion, extraposition facts show independently of the case facts that the relative pronoun in Modern German is syntactically part of the relative clause.
 
 
 \subsection{Two problems}
 
-(1) how does this licensing take place? Normally we have a single DP satisfying the case of a single V. What is happening here?
+The previous section showed that the relative pronoun in a Modern German headless relative is syntactically part of the relative clause. In this section I show that two problems arise after assuming that.
+
+The analysis is as follows: the relative pronoun takes the case of the predicate in the relative clause. The sentence is grammatical is the external case is contained in the relative clause case.
+
+First, normally there is a single DP connected to a predicate. Here there is a single DP, the relative pronoun, that is connected to both of the predicates. Or, it is first connected to the clause it is in, but then there is this `secondary' relationship.
+
+Then there is a second problem.
 (2) if we follow this logic, to show this type of case competition? (OHG and Gothic also allow this one, so that is fine, they just allow something else in addition, and I'll get back to that later) But there are languages like Polish, which is so-called `strictly matching'. It always gives an ungrammatical result when there is case competition (and not syncretism or two identical cases).
 
 
@@ -192,6 +188,8 @@ I propose a single answer to both of these questions: there is an external head.
 
 
 \subsubsection{Languages with two heads}
+
+So there is wh, and another wh
 
 There is also independent evidence for this head, namely from languages that actually let the head surface.
 
