--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -3,207 +3,207 @@
 \DeclareAcronym{nom}{
   short = \tsc{nom} ,
   long  = nominative ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{acc}{
   short = \tsc{acc} ,
   long  = accusative ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{dat}{
   short = \tsc{dat} ,
   long  = dative ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{gen}{
   short = \tsc{gen} ,
   long  = genitive ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{1}{
   short = 1 ,
   long  = first person ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{2}{
   short = 2 ,
   long  = second person ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{3}{
   short = 3 ,
   long  = third person ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{n}{
   short = \tsc{n} ,
   long  = neuter ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{m}{
   short = \tsc{m} ,
   long  = masculine ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{f}{
   short = \tsc{f} ,
   long  = feminine ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{sg}{
   short = \tsc{sg} ,
   long  = singular ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{pl}{
   short = \tsc{pl} ,
   long  = plural ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{inan}{
   short = \tsc{inan} ,
   long  = inanimate ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{an}{
   short = \tsc{an} ,
   long  = animate ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{subj}{
   short = \tsc{subj} ,
   long  = subject ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{obj}{
   short = \tsc{obj} ,
   long  = object ,
-  class = abbr
+  tag = abbr
 }
 
 
 \DeclareAcronym{int}{
   short = \tsc{int} ,
   long  = internal case ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{ext}{
   short = \tsc{ext} ,
   long  = external case ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{asp}{
   short = \tsc{asp} ,
   long  = aspectual marker ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{pst}{
   short = \tsc{pst} ,
   long  = past ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{pass}{
   short = \tsc{pass} ,
   long  = passive ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{prog}{
   short = \tsc{prog} ,
   long  = progressive ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{erg}{
   short = \tsc{erg} ,
   long  = ergative ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{abs}{
   short = \tsc{abs} ,
   long  = absolutive ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{def}{
   short = \tsc{def} ,
   long  = definite ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{rel}{
   short = \tsc{rel} ,
   long  = relative ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{aux}{
   short = \tsc{aux} ,
   long  = auxiliary ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{comp}{
   short = \tsc{comp} ,
   long  = complementizer ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{pres}{
   short = \tsc{pres} ,
   long  = present tense ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{ptcp}{
   short = \tsc{ptcp} ,
   long  = participle ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{pret}{
   short = \tsc{pret} ,
   long  = preterite ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{opt}{
   short = \tsc{opt} ,
   long  = optative ,
-  class = abbr
+  tag = abbr
 }
 
 
 \DeclareAcronym{ohg}{
   short = OHG ,
   long  = Old High German ,
-  class = abbr
+  tag = abbr
 }
 
 \DeclareAcronym{mg}{
   short = MG ,
   long  = Modern German ,
-  class = abbr
+  tag = abbr
 }
 
 
@@ -218,59 +218,59 @@
   short = Col. ,
   long  = {Colossians, New Testament} ,
   % cite =  bergsma2019 ,
-  class = texts
+  tag = texts
 }
 
 \DeclareAcronym{rom}{
   short = Rom. ,
   long  = {Romans, New Testament} ,
-  class = texts
+  tag = texts
 }
 
 \DeclareAcronym{john}{
   short = John ,
   long  = {John, New Testament} ,
-  class = texts
+  tag = texts
 }
 
 \DeclareAcronym{mark}{
   short = Mark ,
   long  = {Mark, New Testament} ,
-  class = texts
+  tag = texts
 }
 
 \DeclareAcronym{luke}{
   short = Luke ,
   long  = {Luke, New Testament} ,
-  class = texts
+  tag = texts
 }
 
 \DeclareAcronym{isid}{
   short = Isid. ,
   long  = Der althochdeutsche Isidor ,
-  class = texts
+  tag = texts
 }
 
 \DeclareAcronym{mons}{
   short = Mons. ,
   long  = The Monsee fragments ,
-  class = texts
+  tag = texts
 }
 
 \DeclareAcronym{otfrid}{
   short = Otfrid ,
   long  = Otfrid's Evangelienbuch ,
-  class = texts
+  tag = texts
 }
 
 \DeclareAcronym{tatian}{
   short = Tatian ,
   long  = Tatian ,
-  class = texts
+  tag = texts
 }
 
 \DeclareAcronym{nib}{
   short = Nib. ,
   long  = Das Nibelungenlied ,
-  class = texts
+  tag = texts
 }
