--- a/thesis.tex
+++ b/thesis.tex
@@ -27,7 +27,7 @@
 \chapter*{List of abbreviations}
 \begingroup
   \setlength{\LTleft}{-\tabcolsep}
-\printacronyms[include-classes=abbr, heading=none]
+\printacronyms[include=abbr, heading=none]
 \endgroup
 \addcontentsline{toc}{chapter}{List of abbreviations}
 
@@ -62,7 +62,7 @@
 \chapter*{Primary texts}
 \begingroup
   \setlength{\LTleft}{-\tabcolsep}
-\printacronyms[include-classes=texts, heading=none]
+\printacronyms[include=texts, heading=none]
 \endgroup
 \addcontentsline{toc}{chapter}{Primary texts}
 
