eergister zelfs denk ik
poe

--- a/d-vs-wh.tex
+++ b/d-vs-wh.tex
@@ -2,8 +2,12 @@
 
 \chapter{\tsc{d} vs. \tsc{wh}}\label{ch:relativization}
 
-Proposal of wh in a nutshell
-Proposal of d in a nutshell
+Proposal of wh in a nutshell: wh-relative is part of the relative clause. that's why it takes the internal case. I argue for an external head, that carries the external case. This head is also necessary to distinguish Modern German from languages like Polish. The relative pronoun deletes the external head.
+
+Proposal of d in a nutshell: the analysis here is partly identical to the one for Modern German wh-relatives. d-relative is also part of the relative clause, and it can take the internal case, and it deletes the external head. Additionally, there can be a d, d-combination, and the relative pronoun is deleted under c-command under containment.
+
+In the next section I formulate the possibilities of the languages in terms of lexical entries. So all the behavior we see in this section is derived from how the relative pronouns and the external head is specified in the lexicon.
+
 
 % Some intro about head of the relative clause and relative pronoun.
 
@@ -15,8 +19,6 @@ Proposal of d in a nutshell
 % I connect this behavior of Modern German headless relatives to the shape of its relative pronouns. Modern German has \tsc{wh}-pronouns as relative pronouns in headless relative constructions. In this section I show that it is a consequence of having \tsc{wh}-pronouns as relative pronouns that the internal case can only surface as winner in the case competition. The different behavior of Gothic and Old High German headless relatives follows from the \tsc{d}-pronoun these languages use as their relative pronouns.
 
 % In both types of languages, I analyze it as if there was a head, but it is phonologically empty/deleted. I show that this allows me to make a distinction between German and languages like Polish, that do not allow for the case competition as German does. OHG and Gothic also independently show that they can be derived from a double element structure.
-
-
 
 
 \section{\tsc{wh}-relatives}
