--- a/going-into-detail.tex
+++ b/going-into-detail.tex
@@ -2,6 +2,15 @@
 
 \chapter{Step by step derivations}
 
+OHG d: spec, rel
+OHG wh: only interrogative
+
+MG d: spec, rel
+MG wh: interrogative, rel
+
+P d: deix, rel
+P wh: interrog, rel
+
 \section{Decomposing pronouns}
 
 d-pronouns, wh-pronouns
