--- a/thesis.tex
+++ b/thesis.tex
@@ -44,7 +44,7 @@
 
 \part{The variation}\label{part:direction}
 \include{two-attested-patterns}
-\include{d-vs-wh}
+\include{excluding-the-third-pattern}
 \include{going-into-detail}
 
 \part{Stuff}\label{part:stuff}
