--- a/going-into-detail.tex
+++ b/going-into-detail.tex
@@ -2,6 +2,8 @@
 
 \chapter{Step by step derivations}
 
+In the next chapter I formulate the possibilities of the languages in terms of lexical entries. So all the behavior we see in this section is derived from how the relative pronouns and the external head is specified in the lexicon.
+
 OHG d: spec, rel
 OHG wh: only interrogative
 
