--- a/two-attested-patterns.tex
+++ b/two-attested-patterns.tex
@@ -236,9 +236,17 @@ To summarize
 \end{table}
 
 
-\subsection{Other languages}
 
 
+\subsection{Possible counterexamples}
+
+Old English, Old Icelandic both show: \tsc{d}-pronoun plus invariant relativizer + always take case from the main clause
+
+Greek
+
+Ancient Greek also actually has both directions (see \cite{vanriemsdijk2006}), so there is actually not a language with external only + hierarchy effects
+
+\subsection{No winner}
 
 % The nativeness of the headless relative constructions under
 % consideration, and in particular those represented by group (I), can be
@@ -248,21 +256,13 @@ To summarize
 % they occur in opposition to the Greek. Evidence of the first type is
 % found in Mk 10:32, Luk 3:13, Rom 14:19, II Cor 8:11, Col 3:2, and elsewhere.
 
-
 What does not exist: external only
 
 Something that comes close:
 
-Old English, Old Icelandic both show: \tsc{d}-pronoun plus invariant relativizer + always take case from the main clause
-
-Ancient Greek also actually has both directions (see \cite{vanriemsdijk2006}), so there is actually not a language with external only + hierarchy effects
-
-
 And to complete the picture, there are languages in which nothing goes:
 
 Polish and Italian have \tsc{wh}-pronouns but do not allow for conflicts
-
-
 
 
 \section{Relative pronouns}
