--- a/excluding-the-third-pattern.tex
+++ b/excluding-the-third-pattern.tex
@@ -43,7 +43,7 @@ From these two proposals follows that it is impossible to have third pattern, wh
 
 \section{\tsc{wh}-relatives}
 
-My claim: the behavior in Modern German headless relatives is a consequence of its \tsc{wh}-morphology.
+% My claim: the behavior in Modern German headless relatives is a consequence of its \tsc{wh}-morphology.
 
 In this section I discuss headless relatives in Modern German. Modern German only allows the relative pronoun only to surface in the internal case, not in the external case. The relative pronoun used in headless relatives in this language is a \tsc{wh}-pronoun. I show in this section that syntactically it is part of the relative clause but that the relative pronoun is sensitive to both the internal and external case.
 
